# methods_for_solving_nonlinear_equations

./: 1.nb  2.nb  CMakeLists.txt  main.cpp  main.h  tests.cpp  tests_d.cpp
solve_nonlinear_equation/: Newtons_method.cpp  Newtons_method_for_system.cpp  bisection_method.cpp  localization.cpp  solve_nonlinear_equation.cpp  solve_nonlinear_equation.h  table_creation.cpp
